[tool.poetry]
name = "qubes-doc-rtd"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "qubes_doc"}]

[tool.poetry.dependencies]
python = "^3.11"
sphinxnotes-strike = "^1.2.1"
sphinx-rtd-theme = "^2.0.0"
sphinx-autobuild = "^2024.9.19"
sphinx-reredirects = "^0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
